Update readme; add tests; remove deprecated files

--- a/docs/notebooks/try_rag.ipynb
+++ b/docs/notebooks/try_rag.ipynb
@@ -32,48 +32,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspaces/hsswiki-azureswa/api/src/controllers/controllers.py\", line 19, in vectorize_documents_controller\n",
-      "    VectorizationServiceFacade().vectorize()\n",
-      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/workspaces/hsswiki-azureswa/api/src/services/vectorization_service.py\", line 34, in __init__\n",
-      "    get_factory_from_settings(FactoryType.EMBEDDING_MODEL)\n",
-      "  File \"/workspaces/hsswiki-azureswa/api/src/factories/factory_utils.py\", line 18, in get_factory_from_settings\n",
-      "    factory_module = import_module(f\"src.factories.{factory_name}_factories\")\n",
-      "                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/lib/python3.11/importlib/__init__.py\", line 126, in import_module\n",
-      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1204, in _gcd_import\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1176, in _find_and_load\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1126, in _find_and_load_unlocked\n",
-      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1204, in _gcd_import\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1176, in _find_and_load\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1140, in _find_and_load_unlocked\n",
-      "ModuleNotFoundError: No module named 'src.factories.EmbeddingModelClass'\n",
-      "')\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "test = \"\"\"\n",
-    "Traceback (most recent call last):\\n  File \"/workspaces/hsswiki-azureswa/api/src/controllers/controllers.py\", line 19, in vectorize_documents_controller\\n    VectorizationServiceFacade().vectorize()\\n    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\\n  File \"/workspaces/hsswiki-azureswa/api/src/services/vectorization_service.py\", line 34, in __init__\\n    get_factory_from_settings(FactoryType.EMBEDDING_MODEL)\\n  File \"/workspaces/hsswiki-azureswa/api/src/factories/factory_utils.py\", line 18, in get_factory_from_settings\\n    factory_module = import_module(f\"src.factories.{factory_name}_factories\")\\n                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\\n  File \"/usr/local/lib/python3.11/importlib/__init__.py\", line 126, in import_module\\n    return _bootstrap._gcd_import(name[level:], package, level)\\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\\n  File \"<frozen importlib._bootstrap>\", line 1204, in _gcd_import\\n  File \"<frozen importlib._bootstrap>\", line 1176, in _find_and_load\\n  File \"<frozen importlib._bootstrap>\", line 1126, in _find_and_load_unlocked\\n  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\\n  File \"<frozen importlib._bootstrap>\", line 1204, in _gcd_import\\n  File \"<frozen importlib._bootstrap>\", line 1176, in _find_and_load\\n  File \"<frozen importlib._bootstrap>\", line 1140, in _find_and_load_unlocked\\nModuleNotFoundError: No module named \\'src.factories.EmbeddingModelClass\\'\\n')\n",
-    "\"\"\"\n",
-    "print(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -128,6 +86,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspaces/hsswiki-azureswa/docs/notebooks'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/hsswiki-azureswa/api\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd ../../api/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,6 +173,8 @@
     "\n",
     "class Config(FrozenBaseSettings):\n",
     "    vector_input_folder: str = \"./vector_data/input/\"\n",
+    "    invitation_codes_csv: str\n",
+    "    max_tokens: int = None\n",
     "\n",
     "    # TODO\n",
     "    # For testing. `data/` folder is gitignored.\n",
@@ -219,22 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<VectorStoreType.CHROMA_DB: 'CHROMA_DB'>"
+       "'33,44'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "config.vector_store_type"
+    "config.invitation_codes_csv"
    ]
   },
   {
@@ -314,7 +311,7 @@
     "\n",
     "local_embedding_model = SentenceTransformer(\n",
     "    'all-MiniLM-L6-v2'\n",
-    ")  # Lightweight model\n"
+    ")  # Lightweight model"
    ]
   },
   {
@@ -417,7 +414,7 @@
     "collection.add()\n",
     "\n",
     "# show only the first 100 characters of the stringified vector\n",
-    "print(str(query_result)[:100] + \"...\")\n"
+    "print(str(query_result)[:100] + \"...\")"
    ]
   },
   {
